--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "german-verbs": "^4.2.0",
+    "german-verbs-dict": "^2.2.0",
+    "raw-loader": "^4.0.2",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,7 +26,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "babel-eslint": "^10.1.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.2.1"
   },
   "eslintConfig": {
     "root": true,
@@ -33,7 +43,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {"vue/multi-word-component-names": 0}
   },
   "browserslist": [
     "> 1%",
