--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "german-verbs": "^4.2.0",
     "german-verbs-dict": "^2.2.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "raw-loader": "^4.0.2",
+    "spanish-verbs": "^2.2.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.0",
